# rust-crud-api

./: .env  Cargo.toml  api.http  readme.md
migrations/: 20251003022230_create-games-table.up.sql
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
